Fix incorrect version code for gt trim

--- a/_includes/vindecoder.html
+++ b/_includes/vindecoder.html
@@ -61,7 +61,7 @@
 			const bodyType = ["2D Pilared Sedan"];
 			const bodyTypeCode = ["B"];
 			const version = ["L", "LX", "SLX", "GT"];
-			const versionCode = ["D", "E", "G", "B"];
+			const versionCode = ["D", "E", "G", "P"];
 			const year = ["1971", "1972", "1973", "1974 (Facelift)","1975", "1976"];
 			const yearCode = ["L", "M", "N", "P","R", "S"];
 			const month = ["01", "02", "03", "04", "05", "06", "07", "08", "09","10", "11", "12"];
