Did some layout adjustments + moved the vin header to it's own file
- vincoder has a border because I thought that looked a bit nicer
- the vin plate is the one I have for my current playthrough, separated into it's own html file so I can update it once
- vincoder v1 had a bit of a layout adjustment, button just got moved to the side of the text box
- updated my project site to include me talking about this vincoder stuff
- bye bye new years fireworks

--- a/_includes/vindecoder.html
+++ b/_includes/vindecoder.html
@@ -1,40 +1,47 @@
 <html>
 	<body bgcolor="#cecece">
-	<hr>
-		<p>Type in the Vin code to see what type of Corris Rivett you got!</p>
-		<label>Want the original?</label>
-		<a href="/vindecoder_v1">MWC Vin Decoder</a>
-		<img src="/assets/images/example_vin.png" alt="The very first vin plate I got on my first My Winter Car playthrough">
-		<label>VIN Decode V2</label>
-			<hr>
-				<p style="font-size:120%;">Type | Version | Vehicle No.</p>
-			<div style="padding: 15px;">
-				<input type="text" id="vin_type" value="GG" maxlength="2" style="width:32px">
-				<label style="padding: 8px;">&nbsp;</label>
-				<input type="text" id="vin_version" value="G" maxlength="1" style="width:16px">
-				<label style="padding: 8px;">&nbsp;&nbsp;</label>
-				<input type="text" id="vin_vehicleNo" value="UBBBDML46554" maxlength="12" style="width:110px">
+		 <p style="text-align: center;">
+			<label>Want the original?</label>
+			<a href="/vindecoder_v1">MWC Vin Decoder</a>
+		</p>
+		 <br>
+		 <hr>
+		<p style="text-align: center; font-size:150%;">VIN Decode V2</p>
+		<p style="text-align: center;">Type in the Vin code to see what type of Corris Rivett you got!</p>
+		<div class="outerBlock">
+			<div class="outerVin">
+				<div class="centreVin">
+					<p style="font-size:120%;" style="padiding:30px;">Type | Version | Vehicle No.</p>
+					<input type="text" id="vin_type" value="GG" maxlength="2" style="width:32px">
+					<label style="padding: 8px;">&nbsp;</label>
+					<input type="text" id="vin_version" value="G" maxlength="1" style="width:16px">
+					<label style="padding: 4px;">&nbsp;&nbsp;</label>
+					<input type="text" id="vin_vehicleNo" value="UBBBDML46554" maxlength="12" style="width:110px">
+				</div>
+				<div class="centreVin">
+					<p style="font-size:120%;">Drive | Engine | Trans. | Axle | Colour | Trim</p>
+					<input type="text" id="vin_drive" value="1" maxlength="1" style="width:16px">
+					<label style="padding: 4px;">&nbsp;&nbsp;</label>
+					<input type="text" id="vin_engine" value="NA" maxlength="2" style="width:32px">
+					<label style="padding: 4px;">&nbsp;&nbsp;</label>
+					<input type="text" id="vin_trans" value="B" maxlength="1" style="width:16px">
+					<label style="padding: 4px;">&nbsp;&nbsp;</label>
+					<input type="text" id="vin_axle" value="BA" maxlength="2" style="width:30px">
+					<label style="padding: 4px;">&nbsp;&nbsp;</label>
+					<input type="text" id="vin_colour" value="U-" maxlength="2" style="width:30px">
+					<label style="padding: 2px;">&nbsp;&nbsp;</label>
+					<input type="text" id="vin_trim" value="K" maxlength="1" style="width:16px">
+				</div>
+				<div class="centreVin">
+					<p style="font-size:120%;">L.D.O</p>
+					<input type="text" id="vin_ldo" value="J-184-A-" maxlength="8" style="width:64px padding: 15px;">
+				</div>
 			</div>
-			<p style="font-size:120%;">Drive | Engine | Trans. | Axle | Colour | Trim</p>
-			<div style="padding: 15px;">
-				<input type="text" id="vin_drive" value="1" maxlength="1" style="width:16px">
-				<label style="padding: 4px;">&nbsp;&nbsp;</label>
-				<input type="text" id="vin_engine" value="NA" maxlength="2" style="width:32px">
-				<label style="padding: 4px;">&nbsp;&nbsp;</label>
-				<input type="text" id="vin_trans" value="B" maxlength="1" style="width:16px">
-				<label style="padding: 4px;">&nbsp;&nbsp;</label>
-				<input type="text" id="vin_axle" value="BA" maxlength="2" style="width:30px">
-				<label style="padding: 4px;">&nbsp;&nbsp;</label>
-				<input type="text" id="vin_colour" value="U-" maxlength="2" style="width:30px">
-				<label style="padding: 8px;">&nbsp;&nbsp;</label>
-				<input type="text" id="vin_trim" value="K" maxlength="1" style="width:16px">
 			</div>
-				<p style="font-size:120%;">L.D.O</p>
-			<div style="padding: 15px;">
-				<input type="text" id="vin_ldo" value="J-184-A-" maxlength="8" style="width:64px padding: 15px;">
-			</div>
-			<button onclick="decodeVin(vin_vehicleNo, decodedVIN_type2)">Decode VIN!</button>
-			<ul id="decodedVIN_type2"></ul>
+			<p style="text-align: center;">
+				<button onclick="decodeVin(vin_vehicleNo, decodedVIN)">Decode VIN!</button>
+			</p>
+			<ul id="decodedVIN" class="listjustify"></ul>
 	<script>
 		
 		function combineVinCode()
