--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -93,13 +93,27 @@
 		  width: 50%;
 		  text-align: center;
 		}
-		.column {
-		  float: left;
-		  width: 50%;
+		.centreVin
+		{
+			align-items: center;
+			text-align: justify;
+			padding:10px
 		}
-		.row {
-		margin: auto;
-		  text-align: center;
+		.outerVin
+		{
+			margin: auto;
+			display: inline-block;
+			text-align: center;
+			border: 3px solid black; 
+		}
+		.outerBlock
+		{
+			text-align: center;
+		}
+		.listJustify
+		{
+			width: 50%;
+			margin: auto;
 		}
 	</style>
   </head>
@@ -124,6 +138,7 @@
 	  <footer>
 	  <hr>
         <div class="center">
+		<p style="text-align: center;">
             Connect with me through social media!
 			<br>
 			<a href="https://twitter.com/Arcticfoenix" class="fa fa-twitter"></a>
