--- a/_includes/vindecoder_v1.html
+++ b/_includes/vindecoder_v1.html
@@ -1,30 +1,20 @@
 <html>
 	<body bgcolor="#cecece">
-	<hr>
+		 <hr>
+		<p style="text-align: center; font-size:150%;">VIN Decode V1</p>
 		<p>Type in the Vin code to see what type of Corris Rivett you got!</p>
-		 <img src="/assets/images/example_vin.png" alt="The very first vin plate I got on my first My Winter Car playthrough">
-			<label>VIN Decode V1</label>
-			<hr>
-			<br>
-			<label> DOES NOT USE TYPE OR VERSION</label>
-			<!-- UBBBDML465541NABBAU-KJ-184-A- Is the code shown on the vinplate my winter car website -->
-			<p>VIN Code: <input type="text" id="vincode" value="UBBBDML465541NABBAU-KJ-184-A-" style="width:220px" maxlength="29"></p>
-			<button onclick="decodeVin(vincode, decodedVIN_type1)">Decode VIN!</button>
-			<ul id="decodedVIN_type1"></ul>
-	<script>
 		
-		function combineVinCode()
-		{
-			var combinedVinCode = document.getElementById("vin_vehicleNo").value 
-				+ document.getElementById("vin_drive").value 
-				+ document.getElementById("vin_engine").value 
-				+ document.getElementById("vin_trans").value 
-				+ document.getElementById("vin_axle").value 
-				+ document.getElementById("vin_colour").value
-				+ document.getElementById("vin_trim").value
-				+ document.getElementById("vin_ldo").value;
-			return combinedVinCode;
-		}
+		<br>
+		<p style="text-align: center;">
+		<label> DOES NOT USE TYPE OR VERSION</label>
+		<br>
+		<!-- UBBBDML465541NABBAU-KJ-184-A- Is the code shown on the vinplate my winter car website -->
+			VIN Code: 
+			<input type="text" id="vincode" value="UBBBDML465541NABBAU-KJ-184-A-" style="width:220px" maxlength="29">
+			<button onclick="decodeVin(vincode, decodedVIN)">Decode VIN!</button>
+		</p>
+		<ul id="decodedVIN"></ul>
+	<script>
 		
 		function decodeVin(vincode_input_id, vincode_result_id)
 		{
@@ -76,17 +66,8 @@
 			const rearWindowCode = ["-", "B", "M"];
 			
 			var vinCode = document.getElementById(vincode_input_id.id).value;
-			if(vincode_input_id.id == "vin_vehicleNo")
-			{
-				vinCode = combineVinCode();
-			}
 			var vinCodeString = vinCode.toString();
 			document.getElementById(vincode_result_id.id).innerHTML = ""
-			if(vincode_input_id.id == "vin_vehicleNo")
-			{
-				appendResult("Type: "+document.getElementById("vin_type").value.toString(), vincode_result_id);
-				appendResult("Version: "+document.getElementById("vin_version").value.toString(), vincode_result_id);
-			}
 			var countryResultStr = "1. Country: " + checkCode(countryCode, country, vinCodeString[0]);//1
 			appendResult(countryResultStr.toString(), vincode_result_id);
 			var assemblyResultStr = "2. Assembly: " + checkCode(assmblyPlantCode, assemblyPlant, vinCodeString[1]);//2
