fixed centreing text for vin decoder v1

--- a/_includes/vindecoder_v1.html
+++ b/_includes/vindecoder_v1.html
@@ -2,7 +2,7 @@
 	<body bgcolor="#cecece">
 		 <hr>
 		<p style="text-align: center; font-size:150%;">VIN Decode V1</p>
-		<p>Type in the Vin code to see what type of Corris Rivett you got!</p>
+		<p style="text-align: center;">Type in the Vin code to see what type of Corris Rivett you got!</p>
 		
 		<br>
 		<p style="text-align: center;">
