Added link to community updateable wiki!

--- a/_includes/vindecoder_header.html
+++ b/_includes/vindecoder_header.html
@@ -7,6 +7,8 @@
 		 </p>
 		 <p style="text-align: center;">
 			<label>My Newest Vin Plate :D</label>
+			<br>
+			<a href="https://mywintercar.miraheze.org/wiki/Main_Page" target="_blank" rel="noopener noreferrer">Community Updatable Wiki!</a>
 		 </p>
 	</body>
 </html>
