--- a/_includes/vindecoder_header.html
+++ b/_includes/vindecoder_header.html
@@ -9,6 +9,8 @@
 			<label>My Newest Vin Plate :D</label>
 			<br>
 			<a href="https://mywintercar.miraheze.org/wiki/Main_Page" target="_blank" rel="noopener noreferrer">Community Updatable Wiki!</a>
+			<br>
+			<a href="https://steamcommunity.com/app/4164420/discussions/0/694249110938587626/" target="_blank" rel="noopener noreferrer">Post your Car Type here!</a>
 		 </p>
 	</body>
 </html>
